--- a/src/components/calculator/index.css
+++ b/src/components/calculator/index.css
@@ -26,8 +26,22 @@
     width: 12.85em;
     height: 2.5em;
     font-size: 21pt;
+    overflow-y: scroll;
+    /* direction: rtl; */
 }
 
 button{
     font-size: 21pt;
+}
+
+.history{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 12.85em;
+    height: 2.5em;
+    font-size: 21pt;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    /* direction: rtl; */
 }
